--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-
+body{
+    background-color: rgba(21, 23, 23, 0.4);
+}
 
 h1 {
     color: rgb(12, 0, 0);
