--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body{
-    background-color: rgba(21, 23, 23, 0.4);
+    background-color: rgba(228, 242, 242, 0);
 }
 
 h1 {
@@ -20,21 +20,18 @@ img {
 header {
   
     grid-area: header;
-
-
-
-
-
-
-
-
+    background-color: white;
+    
 
 }
+
+
 
 header ul {
     list-style: none;
     display: flex;
     margin: 0;
+    
 
 
 
@@ -43,6 +40,7 @@ header ul {
 
 header ul li {
     display: flex;
+    
 
     list-style: none;
     margin-right: 20px;
@@ -52,7 +50,7 @@ header ul li {
 }
 
 header ul li:hover {
-    background-color: rgb(192, 217, 227);
+    background-color: rgb(236, 240, 242);
 
 
 
@@ -64,6 +62,7 @@ header ul li a {
     color: rgba(254, 249, 249, 0.74);
     text-decoration: none;
     text-transform: uppercase;
+    
 
 
 
@@ -96,12 +95,15 @@ main iframe {
     display: block;
 }
 
+
+
+
 footer {
     grid-area: footer;
-    background-color: gray;
+    background-color: rgb(251, 242, 242);
     text-align: center;
     padding: 10px 0;
-    color: white;
+    color: rgb(21, 19, 19);
 
 
 }
@@ -180,11 +182,13 @@ h2{
 
 .playita{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 30px;
+    padding: 50px;
     margin-left: auto;
     display: flex;
     justify-content: center;
-    font-size: xx-large;
+    font-size: 100px;
+    
+    
    
     
 
