--- a/css/style.css
+++ b/css/style.css
@@ -1,235 +1,161 @@
 * {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-body{
-    background-color: rgba(228, 242, 242, 0);
-}
-
-h1 {
-    color: rgb(12, 0, 0);
-    text-transform: uppercase;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-}
-
-img {
-    width: 100%;
-}
-
-header {
-  
-    grid-area: header;
-    background-color: white;
-    
-
-}
-
-
-
-header ul {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    
-
-
-
-
-}
-
-header ul li {
-    display: flex;
-    
-
-    list-style: none;
-    margin-right: 20px;
-
-
-
-}
-
-header ul li:hover {
-    background-color: rgb(236, 240, 242);
-
-
-
-}
-
-header ul li a {
-
-    list-style: none;
-    color: rgba(254, 249, 249, 0.74);
-    text-decoration: none;
-    text-transform: uppercase;
-    
-
-
-
-
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 body {
-    display: grid;
-    grid-template-areas:
-        "header"
-        "main"
-        "footer"
-    ;
+  background-color: rgba(228, 242, 242, 0);
+}
 
-    max-width: 800px;
-    margin: 0 auto;
-    position: relative;
+h1 {
+  color: rgb(12, 0, 0);
+  text-transform: uppercase;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
+img {
+  width: 100%;
+}
+
+header {
+  grid-area: header;
+  background-color: white;
+}
+
+header ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+}
+
+header ul li {
+  display: flex;
+  list-style: none;
+  margin-right: 20px;
+}
+
+header ul li:hover {
+  background-color: rgb(236, 240, 242);
+}
+
+header ul li a {
+  list-style: none;
+  color: rgba(254, 249, 249, 0.74);
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+body {
+  display: grid;
+  grid-template-areas: "header" "main" "footer";
+  max-width: 800px;
+  margin: 0 auto;
+  position: relative;
 }
 
 main {
-
-    grid-area: main;
-    min-height: 100vh;
-
+  grid-area: main;
+  min-height: 100vh;
 }
 
 main iframe {
-    margin: 0 auto;
-    display: block;
+  margin: 0 auto;
+  display: block;
 }
 
-
-
-
 footer {
-    grid-area: footer;
-    background-color: rgb(251, 242, 242);
-    text-align: center;
-    padding: 10px 0;
-    color: rgb(21, 19, 19);
-
-
+  grid-area: footer;
+  background-color: rgb(251, 242, 242);
+  text-align: center;
+  padding: 10px 0;
+  color: rgb(21, 19, 19);
 }
 
 .entrenador {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .entrenador h3 {
-    font-size: 30px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-
+  font-size: 30px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .entrenador img {
-    width: 100%;
+  width: 100%;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 form input {
-    margin-bottom: 20px;
-
-
+  margin-bottom: 20px;
 }
 
 form textarea {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 section article {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .button {
-    border: 1px solid black;
-    padding: 5px;
-    text-decoration: none;
-    color: black;
+  border: 1px solid black;
+  padding: 5px;
+  text-decoration: none;
+  color: black;
 }
 
 .precio {
-    font-size: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .titulo-entrenadores {
-    text-align: center;
-    margin-bottom: 30px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+  margin-bottom: 30px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .escuelaDeSurf {
-    display: flex;
-    justify-content: center;
-
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(2, 11, 8);
-
-
-
-
+  display: flex;
+  justify-content: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(2, 11, 8);
 }
 
-h2{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+h2 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.playita{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 50px;
-    margin-left: auto;
-    display: flex;
-    justify-content: center;
-    font-size: 100px;
-    
-    
-   
-    
-
+.playita {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 50px;
+  margin-left: auto;
+  display: flex;
+  justify-content: center;
+  font-size: 100px;
 }
 
-.seccionPlayita article img{
-    display: flex;
-    width: 100%;
-    
-  
-
-    
-    
-    
-    
-    
-
-
-    
-    
-
-    
-    
-    
-    
-    
+.seccionPlayita article img {
+  display: flex;
+  width: 100%;
 }
 
-.imagen1{
-    display: flex;
-    padding: 20px;
-    flex-direction: row;
+.imagen1 {
+  display: flex;
+  padding: 20px;
+  flex-direction: row;
 }
-
-
-
 
 @media (min-width: 800px) {
-    .entrenador {
-        flex-wrap: nowrap;
-        
-    }
+  .entrenador {
+    flex-wrap: nowrap;
   }
-  
+}
+
+/*# sourceMappingURL=style.css.map */
