--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,74 +2,8 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-body{
-    background-color: rgba(228, 242, 242, 0);
-}
-
-h1 {
-    color: rgb(12, 0, 0);
-    text-transform: uppercase;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-}
-
-img {
-    width: 100%;
-}
-
-header {
-  
-    grid-area: header;
-    background-color: white;
-    
-
-}
-
-
-
-header ul {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    
-
-
-
-
-}
-
-header ul li {
-    display: flex;
-    
-
-    list-style: none;
-    margin-right: 20px;
-
-
-
-}
-
-header ul li:hover {
-    background-color: rgb(236, 240, 242);
-
-
-
-}
-
-header ul li a {
-
-    list-style: none;
-    color: rgba(254, 249, 249, 0.74);
-    text-decoration: none;
-    text-transform: uppercase;
-    
-
-
-
-
-}
-
 body {
+    background-color: rgba(228, 242, 242, 0);
     display: grid;
     grid-template-areas:
         "header"
@@ -80,158 +14,14 @@ body {
     max-width: 800px;
     margin: 0 auto;
     position: relative;
-
-}
-
-main {
-
-    grid-area: main;
-    min-height: 100vh;
-
-}
-
-main iframe {
-    margin: 0 auto;
-    display: block;
-}
+    @import "./partials/header"; 
+    @import "./partials/main";
+    @import "./partials/footer";
 
 
-
-
-footer {
-    grid-area: footer;
-    background-color: rgb(251, 242, 242);
-    text-align: center;
-    padding: 10px 0;
-    color: rgb(21, 19, 19);
-
-
-}
-
-.entrenador {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-
-}
-
-.entrenador h3 {
-    font-size: 30px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-}
-
-.entrenador img {
-    width: 100%;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-form input {
-    margin-bottom: 20px;
-
-
-}
-
-form textarea {
-    margin-bottom: 20px;
-}
-
-section article {
-    margin-bottom: 30px;
-}
-
-.button {
-    border: 1px solid black;
-    padding: 5px;
-    text-decoration: none;
-    color: black;
-}
-
-.precio {
-    font-size: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.titulo-entrenadores {
-    text-align: center;
-    margin-bottom: 30px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.escuelaDeSurf {
-    display: flex;
-    justify-content: center;
-
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(2, 11, 8);
-
-
-
-
-}
-
-h2{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.playita{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 50px;
-    margin-left: auto;
-    display: flex;
-    justify-content: center;
-    font-size: 100px;
-    
-    
+   
    
     
-
-}
-
-.seccionPlayita article img{
-    display: flex;
-    width: 100%;
-    
-  
-
-    
-    
-    
-    
-    
-
-
-    
-    
-
-    
-    
-    
-    
-    
-}
-
-.imagen1{
-    display: flex;
-    padding: 20px;
-    flex-direction: row;
 }
 
 
-
-
-@media (min-width: 800px) {
-    .entrenador {
-        flex-wrap: nowrap;
-        
-    }
-  }
-  
-
-  
