añadido el favicon,titulos de las paginas descripcion y keywords

--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,9 +1,9 @@
 footer {
     grid-area: footer;
-    background-color: rgb(251, 242, 242);
+    background-color: rgba(251, 242, 242, 0.097);
     text-align: center;
     padding: 10px 0;
-    color: rgb(21, 19, 19);
+    color: rgb(234, 222, 222);
 
-
+    
 }
