--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,37 +1,31 @@
 header {
-    
-        grid-area: header;
-        background-color: white;
-        ul {
-            list-style: none;
-            display: flex;
-            margin: 0;
-            li {
-                display: flex;
-            
-            
-                list-style: none;
-                margin-right: 20px;
-                &:hover {
-                    background-color: rgb(236, 240, 242);
 
-                    a {
-    
-                        list-style: none;
-                        color: rgba(254, 249, 249, 0.74);
-                        text-decoration: none;
-                        text-transform: uppercase;
+    grid-area: header;
+    grid-template-rows: max-content;
+
+    ul {
+        list-style: none;
+        display: flex;
+
+        li {
+            display: flex;
+            list-style: none;
+            margin-right: 20px;
+
+            &:hover {
+                background-color: rgb(245, 250, 253);
+
+                a {
                     
-                    
-                    
-                    
-                    
-                    }
-                
-                
-                
+                    list-style: none;
+                    color: rgb(250, 243, 243);
+                    text-decoration: none;
+                    text-transform: uppercase;
                 }
+
+
+
             }
         }
     }
-            
+}
