--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -11,6 +11,10 @@ header {
             display: flex;
             list-style: none;
             margin-right: 20px;
+            a.nav-link{
+                color: $colorTexto;
+
+            }
 
             &:hover {
                 background-color: rgb(245, 250, 253);
